--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "9c436693-d2a7-44c1-aa27-a7c862998c29",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### It is considered a best practice to begin your Jupyter Notebook with informative text written using a Markdown cell that describes the purpose of the code within the notebook. This will help you remember what your goal of the notebook is and will help any user of your code become oriented to your notebook.\n",
     "\n",
@@ -42,12 +44,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3e9134a-56de-41f8-b2f8-1990134714f5",
+   "cell_type": "markdown",
+   "id": "f12704c1-d41f-4c2f-8cc2-778ae97a86a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "this isn't my first time coding but I don't remember much. \n",
+    "# this is my first notebook!\n",
+    "## but not really\n",
+    "jupyter is run to:\n",
+    "> - run plots\n",
+    "> - organize code\n",
+    "> - make things easier to view"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "ee09737a-2c2e-4fe5-8f4c-e415afb36a29",
    "metadata": {
     "tags": []
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "e5743e56-a5bd-44a9-bb89-ef2fd2ad8892",
    "metadata": {
     "tags": []
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "f408fb5c-9b9a-4c6f-82ad-7df15790425a",
    "metadata": {},
    "outputs": [
@@ -128,13 +136,13 @@
      "output_type": "stream",
      "text": [
       "Hello World!\n",
-      "6\n"
+      "2+4\n"
      ]
     }
    ],
    "source": [
     "print(\"Hello World!\") ## the print function prints out the expression inside of the ( ).\n",
-    "print(2+4)"
+    "print(\"2+4\")"
    ]
   },
   {
@@ -146,12 +154,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70d7a347-e277-4bbc-800c-75db004ded38",
+   "cell_type": "markdown",
+   "id": "69f7fb7a-0567-4ebe-afa3-c05128b0d9e4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "it is now considered a string and strings are not computed like integer data types"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -455,12 +463,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e9cb565-8090-4dd2-8720-03d0ccb8db08",
+   "cell_type": "markdown",
+   "id": "c0c52c34-6cb4-4ad1-817c-57e54b8ababc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "int are whole numbers where as floats will have decimals. if you have an equation mixed, it will produce a float"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -472,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "1c7a214b-1b81-4c9d-bb4e-bcbe212a1dae",
    "metadata": {
     "tags": []
@@ -494,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "cb459bd9-a9c7-4051-a6b7-f967dc4d4352",
    "metadata": {
     "tags": []
@@ -516,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "df00daea-985e-464c-bf96-dc01d5b9c998",
    "metadata": {
     "tags": []
@@ -546,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "8c6d2ca1-c236-437a-a22d-9b32ecbba329",
    "metadata": {
     "tags": []
@@ -574,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "9b58d17a-868d-4afc-ae4e-01141669d4e8",
    "metadata": {
     "tags": []
@@ -594,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "35748816-5dfc-4112-bcf7-3dd83866e931",
    "metadata": {
     "tags": []
@@ -614,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "60bf5a0f-7a98-4072-ba15-fb1dee1afbd9",
    "metadata": {
     "tags": []
@@ -634,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "9bffe7c4-50f9-4234-8810-a8baaca19f25",
    "metadata": {
     "tags": []
@@ -678,19 +686,30 @@
    "source": [
     "### <span style=\"color:red\"> Before you run the cells below, make a prediction of whether the boolean value returned will be `True` or `False`\n",
     "\n",
-    "#### <span style=\"color:red\"> __Prediction Cell 1:__ \n",
-    "#### <span style=\"color:red\"> __Prediction Cell 2:__ \n",
-    "#### <span style=\"color:red\"> __Prediction Cell 3:__ "
+    "#### <span style=\"color:red\"> __Prediction Cell 1:__ False\n",
+    "#### <span style=\"color:red\"> __Prediction Cell 2:__ True\n",
+    "#### <span style=\"color:red\"> __Prediction Cell 3:__ False - confused about this function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "b26647b1-6abd-4d53-a0ff-6a57e2ec0571",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 5\n",
     "x < 5 and x < 10"
@@ -698,12 +717,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "b7fe85ff-3d9c-49ea-8149-ccad5bd07dff",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 9\n",
     "x < 5 or x < 10"
@@ -711,12 +741,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "854dafd5-1310-4d8d-8140-a16f93bf0bff",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "not(x < 5 and x < 10)"
    ]
@@ -768,59 +809,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c5bf91c4-f641-4ea3-80b9-4a26b465dc62",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 != 6"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4b3a254f-43b3-4629-893a-234b5a6f6960",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5<=5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5ce0e508-ac29-40f2-b308-2d547a7c8d24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10>=12"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e115a89d-7d36-484d-b7c7-9883b46dd5c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12==34"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5c9b952c-0874-4fda-a4d6-c163565c72db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "13<=12"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "39315d69-30c0-4f89-bc49-891ee1d5b108",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.001>0.01"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "05ff4b65-7897-4dce-8a01-90d051c96da0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.003<0.1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -836,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "396970cd-0998-47bd-82a2-7fab24a7652b",
    "metadata": {
     "tags": []
@@ -848,7 +980,7 @@
        "[0, 1, 1, 2, 3, 5, 8]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "3d531edd-e81a-4212-8196-9460523ebe2a",
    "metadata": {
     "tags": []
@@ -872,7 +1004,7 @@
        "[2, 11, 23, 5, 10, 5, 0]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "7a9bc1a6-307e-4e67-8c6c-dc36f2308a0c",
    "metadata": {
     "tags": []
@@ -912,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "9e106ac6-d853-4578-985f-4473a6d6387e",
    "metadata": {
     "tags": []
@@ -924,7 +1056,7 @@
        "[4, 'orange', 12, 5.0, 'yellow', 5, 0]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,12 +1075,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a8a6968-58cc-49c3-b546-4e25334490d9",
+   "cell_type": "markdown",
+   "id": "4ec08590-9376-4096-b5d4-1e088a99ad5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "int, str, int, float, str, int, int"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -970,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "df940619-ccc7-457d-a3d5-52dc71a35847",
    "metadata": {
     "tags": []
@@ -988,7 +1120,7 @@
        " 'python']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,11 +1142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "4e05c6ad-529f-4ad1-bb80-55c8f360d1dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(our_test_list))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1027,12 +1169,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c86e277b-d7a7-4efc-82b3-ce50eb0196cb",
+   "cell_type": "markdown",
+   "id": "b34d79e5-ab1f-4bcc-a776-4753f4252526",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "str"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1052,15 +1194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "ffd74c4c-3711-4106-8e21-2de2848c5bea",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code\n",
+      "Favtutor\n"
+     ]
+    }
+   ],
    "source": [
-    "print(our_test_list[0])\n",
-    "print(our_test_list[1])"
+    "print(our_test_list[0]) #code\n",
+    "print(our_test_list[1]) #favtutor"
    ]
   },
   {
@@ -1073,13 +1224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "80bb2487-262a-446b-878a-3b26e8f0a3ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(our_test_list[-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1091,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "e3658c0f-045e-4b5d-bc71-a0ed0c066940",
    "metadata": {
     "tags": []
@@ -1103,7 +1264,7 @@
        "'Machine Learning'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "afa54ad9-7216-43da-bafa-7d4e878eacae",
    "metadata": {
     "tags": []
@@ -1176,7 +1337,7 @@
        "'Code'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,25 +1433,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "b74cbe5e-6680-4a6b-90ee-576a916a7902",
+   "cell_type": "markdown",
+   "id": "75257da2-fee5-447c-b038-edf303813e53",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Machine Learning', 'Students', 'Studies', 'java']"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "bc indexing starts at 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1302,13 +1452,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "522dc659-1b00-46a1-b8ae-8ec6a7a2a65d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Code', 'Favtutor', 'Machine Learning', 'Students', 'Studies', 'java']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "our_test_list[0:6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b2596f41-7501-4efe-9da3-32fc34d2184f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Code', 'Favtutor', 'Machine Learning', 'Students', 'Studies', 'java']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "our_test_list[-7:-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1419,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "id": "8b84d6a2-7b49-4f9f-a417-ebfacedafb61",
    "metadata": {
     "tags": []
@@ -1431,7 +1615,7 @@
        "('apple', 'banana', 'orange')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "id": "10b1f920-9b49-4503-a2b8-eb121c572273",
    "metadata": {
     "tags": []
@@ -1455,7 +1639,7 @@
        "'apple'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,12 +1658,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "26aaf2d7-843d-462a-a00c-9de59bdc3efd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[56], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fruits[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrape\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "fruits[0] = \"grape\""
    ]
@@ -1494,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "01af1837-5de5-4a67-a769-9c70a961cfdf",
    "metadata": {
     "tags": []
@@ -1506,7 +1702,7 @@
        "dict"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "id": "2784d73a-d5ef-47b8-ae11-2c19e07b928b",
    "metadata": {
     "tags": []
@@ -1565,7 +1761,7 @@
        "'cat'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1584,11 +1780,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "3996f77f-e843-4a28-b5b8-7be42e7224d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mypet['age']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1643,7 +1852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
