--- a/notebooks/Fundamentals_ControlFlow_Functions.ipynb
+++ b/notebooks/Fundamentals_ControlFlow_Functions.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "d78e9fe4-b0cc-4a75-bfa8-c5f9718c1201",
    "metadata": {
     "tags": []
@@ -161,12 +161,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a14d8d13-d6c5-41f6-849b-00f7263eb520",
+   "cell_type": "markdown",
+   "id": "273ff1c8-7840-484d-8256-166a28a4a290",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. doesn't run but no error \n",
+    "2. it runs and prints out hi dr beadling\n",
+    "3. indentation error"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,11 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "19aefadb-d17c-45a3-828d-f6b43c3c00ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Grace Woolslayer\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Grace Woolslayer'  # Defined a variable called name that is equal to the string, Grace Woolslayer\n",
+    "\n",
+    "if name == 'Grace Woolslayer': # statement that must evaluate to True for this code to execute :Grace Woolslayer\n",
+    "    print('Hi, Grace Woolslayer')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "b880e89b-3777-4a02-ae10-ebd64934bcea",
    "metadata": {
     "tags": []
@@ -217,8 +232,8 @@
     }
    ],
    "source": [
-    "if name != 'George':\n",
-    "    print('You are not George')"
+    "if name != 'George': # this is a conditional statement that is saying not equal to so if the person's name is not George, the next line prints you are not george  \n",
+    "    print('You are not George') #any name that is not George will result in True and will print you are not george"
    ]
   },
   {
@@ -232,14 +247,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a58fc8d3-4247-4a6d-8ce7-d595aee18ede",
+   "cell_type": "markdown",
+   "id": "aea90958-2977-4255-b4b3-c4f20ecc37c6",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "We did not have to define the variable again bc Python saves the defined variable from earlier. The current value of my name variable is Grace Woolslayer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "93811d5c-ba9e-4b72-acf1-e72eb0ff1c50",
    "metadata": {},
    "outputs": [
@@ -286,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "29dccd52-94d3-4c0d-b0ad-c720ad780caf",
    "metadata": {
     "tags": []
@@ -296,12 +311,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi George!\n"
+      "Hi Debora!\n"
      ]
     }
    ],
    "source": [
-    "name = 'George' # assign value 'George' to variable name\n",
+    "name = 'Debora' # assign value 'George' to variable name\n",
     "\n",
     "if name == 'Debora': # our statement must evaluate to True for this code below to execute.\n",
     "    print('Hi Debora!') \n",
@@ -318,8 +333,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b51ef77-0262-47d8-bebb-f73d6334420c",
+   "metadata": {},
+   "source": [
+    "will not run because name variable is defined as dr beadling. oop ok so it will run, if the name does not equal deb or george it will print who are you"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "9d5d6fd9-6d60-4e5c-806d-e1f08d19ca73",
    "metadata": {
     "tags": []
@@ -346,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "8af89d4c-f4b3-4fcc-92c6-403094ed63c1",
    "metadata": {
     "tags": []
@@ -380,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "id": "dac58925-7a94-4e34-aaaa-867a68fdd272",
    "metadata": {
     "tags": []
@@ -420,27 +443,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "cf55f69d-9d8b-49c5-b3fb-0ec4a9e0be37",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok to buy\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = 3 #defined variable\n",
+    "if price < 10: #must be true to execute\n",
+    "    print('ok to buy')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "18157e8a-835e-47f9-b601-7a07ae399e56",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "too expensive\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = 20 #defined price variable with an integer\n",
+    "if price > 10: #if price >10 is true, then it will print too expensive\n",
+    "    print('too expensive')\n",
+    "elif price < 10: #if price < is true it will print ok to buy\n",
+    "    print('ok to buy')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "7a14fd0b-22f6-4e22-9f49-de802edcbe9e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "think about it and come back\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = 'im not sure' #answer is defined \n",
+    "if answer == 'yes': #if answer is yes,then the statement will be true and print you are ready to budget\n",
+    "    print('you are ready to budget!')\n",
+    "elif answer == 'no': #if answer is no then the statement will be true and print maybe next time\n",
+    "    print('maybe next time :/')\n",
+    "else: #if answer is something else then it will be false and statement think about it will print\n",
+    "    print('think about it and come back')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -468,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "ebbc0c36-13ea-4a8f-8b9b-151a3c2a6c27",
    "metadata": {
     "tags": []
@@ -528,12 +593,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ebaacbe-2865-4a17-88f8-8aaa130c80fe",
+   "cell_type": "markdown",
+   "id": "a36bcd60-cfc4-486d-960d-a76199f936dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "i think 5 would print out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "650c1d27-60a2-4ad8-891b-9c66c54fb2a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "planets\n",
+      "planets\n",
+      "planets\n",
+      "planets\n",
+      "planets\n"
+     ]
+    }
+   ],
+   "source": [
+    "planets = 0                # define a variable planet that is equal to zero (0)\n",
+    "while planets < 5:             # while the value of planet is LESS THAN (<) 8, do the following ..\n",
+    "    print('planets')            # print the word planet\n",
+    "    planets = planets + 1      # THEN take the value of planet and add 1 to it, i.e., INCREMENT by 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -813,35 +903,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "566929ca-54c2-4897-a6e1-f1b16f3d904a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "ok to spend now\n"
+     ]
+    }
+   ],
+   "source": [
+    "budget = 0 #starting variable budget of 0\n",
+    "while budget < 4: #while budget is under 4, keep making money\n",
+    "    print(budget)\n",
+    "    budget += 1 #add to budget +1 \n",
+    "else:\n",
+    "    print(\"ok to spend now\") #once you reach 3, you can spend now"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "fa5a1758-e17e-465c-a1c2-51d04c5c20ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keep working\n",
+      "keep working\n",
+      "keep working\n",
+      "keep working\n",
+      "keep working\n",
+      "keep working\n",
+      "relax\n"
+     ]
+    }
+   ],
+   "source": [
+    "savings = 0                # define a variable \n",
+    "while savings <= 100:             # while the value of planet is LESS THAN (<) 8, do the following ..\n",
+    "    print('keep working')            # print the word planet\n",
+    "    savings = savings + 10 *2      \n",
+    "else:\n",
+    "    print('relax')#reached 100 so now we can relax "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "53f4deea-c6e2-4ce7-b726-3718ec53d6c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "e\n",
+      "a\n",
+      "r\n",
+      "n\n",
+      " \n",
+      "c\n",
+      "o\n",
+      "d\n",
+      "e\n",
+      "\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in \"learn code\": #will print the elements of these words\n",
+    "    print(x)\n",
+    "else:\n",
+    "    print()                     ## adds a space \n",
+    "    print(\"done\")  ## print the string in the \"\"."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "69264207-6d45-42fc-a253-2af58339d817",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nickels\n",
+      "pennies\n",
+      "quarters\n"
+     ]
+    }
+   ],
+   "source": [
+    "money = [\"nickels\", \"pennies\", \"quarters\"]        # define a variable money that has the list of change\n",
+    "for elements in money:                       # for each element, x, inside of the list money \n",
+    "  print(elements)                             # print the element"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -876,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "id": "618796a2-a74c-4dae-914b-f929a77c46db",
    "metadata": {
     "tags": []
@@ -899,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "id": "b176950a-71f0-4aea-b6a9-6831e8b43fc3",
    "metadata": {
     "tags": []
@@ -927,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "id": "8b598fa3-5982-4c6e-a344-b9141e19b6c3",
    "metadata": {
     "tags": []
@@ -948,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "id": "5f286236-ae50-4887-805f-40c4769e0af0",
    "metadata": {
     "tags": []
@@ -961,7 +1130,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmy_first_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[56], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmy_first_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[0;31mTypeError\u001b[0m: my_first_function() missing 1 required positional argument: 'name'"
      ]
     }
@@ -971,16 +1140,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e935f596-5b17-4d64-9016-098205fcf7cd",
+   "cell_type": "markdown",
+   "id": "340ba5ed-9221-41fa-9d9b-a8b5dc7e984a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "there is no argument "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "id": "fbb6d2d5-0b08-4618-9de9-c370027a150f",
    "metadata": {
     "tags": []
@@ -1013,7 +1182,7 @@
     "tags": []
    },
    "source": [
-    "my_first_function(\"Becki\",\"Beadling\")"
+    " will not run because only takes one arguement"
    ]
   },
   {
@@ -1038,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 75,
    "id": "ba69b6e6-4728-462a-b7f4-cfdeb8640ece",
    "metadata": {
     "tags": []
@@ -1052,32 +1221,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 80,
    "id": "9c4bf665-2f62-4b0d-b0b3-1c76aca91ddd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "T_Kelvin = convert_celcius_to_degrees(5)  # Passes 5 into the convert_celcius_to_degrees_function \n",
+    "T_Kelvin = convert_celcius_to_Kelvin(5)  # Passes 5 into the convert_celcius_to_degrees_function \n",
     "                                          # and saves the result as a new variable, T_Kelvin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 81,
    "id": "f5629e56-4fb2-4b90-8a64-2ebeac494f57",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(278.15, 5)"
+       "278.15"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "id": "34370da9-40d9-4417-9c6e-3eb93c66ff87",
    "metadata": {
     "tags": []
@@ -1112,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "ecc6632e-b67f-42b4-8ddb-86099ea2d3c0",
    "metadata": {
     "tags": []
@@ -1124,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "id": "bf45fa8a-1daa-4719-9646-e69be0d2a204",
    "metadata": {
     "tags": []
@@ -1136,7 +1306,7 @@
        "(278.15, 5)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,15 +1333,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "id": "85a8c32e-714e-4272-8e27-3a87a05fa7e3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "278.15"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Kelvin = \n",
-    "Celcius = "
+    "Kelvin = T_Conversion[0]\n",
+    "Kelvin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e8b1a2cc-f008-4d76-b07f-82b58df6f46c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Celcius = T_Conversion[1]\n",
+    "Celcius"
    ]
   },
   {
@@ -1184,27 +1387,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "640c1055-b0fb-4f02-a85a-023d55d88db3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def convert_celcius_to_Kelvin(temp_C):\n",
+    "    tempK = temp_C + 273.15\n",
+    "    temp_f = temp_C * (9/5) + 32 \n",
+    "    return tempK, temp_C, temp_f"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6cce8675-0aa4-4b22-b46d-511a3431f97c",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ba5c088-76c3-4bcb-85ee-2df87bb7a854",
-   "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(309.15, 36, 96.8)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T_conversion = convert_celcius_to_Kelvin(36)\n",
+    "T_conversion"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1217,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "id": "81ec3287-38d6-4d96-ab34-d546f8a00a0b",
    "metadata": {
     "tags": []
@@ -1235,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "1f8fdaf5-c1df-4ce9-8d7e-7f02089a7191",
    "metadata": {
     "tags": []
@@ -1247,7 +1463,7 @@
        "96.8"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "id": "84489c9f-dbfd-44c6-bb15-ca57d10dc94a",
    "metadata": {
     "tags": []
@@ -1270,7 +1486,7 @@
        "309.15"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "ba6f7a96-6ebe-421d-8c20-cf24cac2065f",
    "metadata": {
     "tags": []
@@ -1355,19 +1571,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "166f25ab-a996-4ea8-905a-6d9b6310d7d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def number_squared(number): \n",
+    "    \n",
+    "    \"\"\" \n",
+    "    This function squares an int\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    input : number (int)\n",
+    "   \n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    output: sqr (int)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    sqr = number**2\n",
+    "    return sqr\n",
+    "  "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b5b59e16-64f4-407d-9be1-e6e2bf21e66a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_squared(2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1416,7 +1664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
